fix black .line background on firefox

--- a/styles.css
+++ b/styles.css
@@ -187,10 +187,9 @@ main {
     margin-top: 2.287vh;
 }
 .line {
-    background: white;
+    background: rgba(255, 255, 255, 0.2);
     height: 100%;
     width: 95%;
-    opacity: 0.2;
     border-radius: 100vh;
 }
 .what-i-do {
